[project]
name = "django-smart-layer"
version = "0.1.0"
description = "AI-powered Django middleware for security, monitoring and rate limiting"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
scheduler = [
    "apscheduler>=3.10",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["smartlayer*"]