[project]
name = "django-smart-layer"
version = "0.1.1"
description = "AI-powered Django middleware for security, monitoring and rate limiting"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ayushi Agrawal", email = "ayushiagrawal2507@email.com"}
]
keywords = ["django", "middleware", "ai", "security", "rate-limiting"]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "django>=4.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
scheduler = [
    "apscheduler>=3.10",
]

[project.urls]
Homepage = "https://github.com/ayushi2577/SmartLayer"
Repository = "https://github.com/ayushi2577/SmartLayer"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["smartlayer*"]