[project]
name = "django-smart-layer"
version = "0.1.2"
description = "AI-powered Django middleware for security, monitoring and rate limiting"
requires-python = ">=3.10"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "Ayushi Agrawal", email = "ayushiagrawal2507@gmail.com"}
]
keywords = ["django", "middleware", "ai", "security", "rate-limiting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "django>=4.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
scheduler = [
    "apscheduler>=3.10",
]

[project.urls]
Homepage = "https://github.com/ayushi2577/SmartLayer"
Repository = "https://github.com/ayushi2577/SmartLayer"
"Bug Tracker" = "https://github.com/you/smartlayer/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["smartlayer*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"smartlayer" = ["migrations/*.py"]